finished the exersice

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>POO</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,6 +17,21 @@
 </head>
 
 <body>
+    <p>
+     Titre
+      <input type="text" id="title"  placeholder=" titre">
+    </p><br>
+    <p>
+      Phrase d'accroche
+      <input type="text"  id="phrase" placeholder="shti jwan har jwana">
+    </p><br>
+    <p>
+      Description
+      <textarea  id="description" rows="3" placeholder="description"></textarea>
+    </p><br>
+     <button  onclick="sumbit.getInput()">Submit</button>
+     <div id="cards">
+     </div>    
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
